jpms fixes